--- a/dwm-anchor/zephyr/prj.conf
+++ b/dwm-anchor/zephyr/prj.conf
@@ -1,9 +1,10 @@
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
-CONFIG_BT_DEVICE_NAME="DWMRESP"
+CONFIG_BT_DEVICE_NAME="Anchor"
 CONFIG_BT_DEVICE_APPEARANCE=128
-CONFIG_BT_DEBUG_LOG=y
+CONFIG_BT_DEBUG_LOG=n
 
+CONFIG_BT_DEVICE_NAME_DYNAMIC=y
 CONFIG_BT_GATT_DYNAMIC_DB=y
 CONFIG_BT_GATT_CLIENT=y
 CONFIG_BT_BAS=y
