--- a/dwm-tag/zephyr/prj.conf
+++ b/dwm-tag/zephyr/prj.conf
@@ -1,6 +1,6 @@
 CONFIG_BT=y
 CONFIG_BT_DEBUG_LOG=y
-CONFIG_BT_DEVICE_NAME="DS_TWR_INIT"
+CONFIG_BT_DEVICE_NAME="DWM-Tag"
 
 # Enable MPU
 CONFIG_ARM_MPU=y
