--- a/dwm-anchor/platformio.ini
+++ b/dwm-anchor/platformio.ini
@@ -14,3 +14,6 @@ framework = zephyr
 board = decawave_dwm1001_dev
 monitor_speed = 115200
 upload_protocol = jlink
+build_flags =
+    -D DEVICE_ANCHOR_01
+    -D DEBUG
