--- a/dwm-tag/zephyr/prj.conf
+++ b/dwm-tag/zephyr/prj.conf
@@ -1,32 +1,34 @@
 CONFIG_BT=y
-CONFIG_BT_DEBUG_LOG=y
+CONFIG_BT_SETTINGS=y
+CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="DWM-Tag"
+CONFIG_BT_DEVICE_APPEARANCE=128
+CONFIG_BT_DEBUG_LOG=n
 
-# Enable MPU
+CONFIG_BT_DEVICE_NAME_DYNAMIC=y
+CONFIG_BT_GATT_DYNAMIC_DB=y
+CONFIG_BT_GATT_CLIENT=y
+CONFIG_BT_BAS=y
+CONFIG_BT_SIGNING=y
+CONFIG_BT_BONDABLE=y
+CONFIG_BT_SMP=y
+CONFIG_BT_CONN_TX_MAX=4
+CONFIG_BT_L2CAP_TX_MTU=247
+CONFIG_BT_BUF_ACL_RX_SIZE=251
+CONFIG_BT_BUF_ACL_TX_SIZE=251
+CONFIG_BT_CTLR_DATA_LENGTH_MAX=251
+
+CONFIG_DEBUG=y
 CONFIG_ARM_MPU=y
-
-# Enable RTT
-CONFIG_USE_SEGGER_RTT=y
-
-# enable GPIO
 CONFIG_GPIO=y
-
-# enable uart driver
 CONFIG_SERIAL=y
-
-# enable console
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
 CONFIG_RTT_CONSOLE=y
-
-#####################
-
-CONFIG_DEBUG=y
-
 CONFIG_SPI=y
-
 CONFIG_PRINTK=y
 
+CONFIG_USE_SEGGER_RTT=y
 CONFIG_SEGGER_RTT_MAX_NUM_UP_BUFFERS=3
 CONFIG_SEGGER_RTT_MAX_NUM_DOWN_BUFFERS=3
 CONFIG_SEGGER_RTT_BUFFER_SIZE_UP=1024
@@ -34,19 +36,35 @@ CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=16
 CONFIG_SEGGER_RTT_PRINTF_BUFFER_SIZE=64
 CONFIG_SEGGER_RTT_MODE_NO_BLOCK_SKIP=y
 
+CONFIG_DEBUG=y
+CONFIG_ARM_MPU=y
+CONFIG_GPIO=y
+CONFIG_SERIAL=y
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
+CONFIG_RTT_CONSOLE=y
+CONFIG_SPI=y
+CONFIG_PRINTK=y
+
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_SEGGER_RTT_MAX_NUM_UP_BUFFERS=3
+CONFIG_SEGGER_RTT_MAX_NUM_DOWN_BUFFERS=3
+CONFIG_SEGGER_RTT_BUFFER_SIZE_UP=1024
+CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=16
+CONFIG_SEGGER_RTT_PRINTF_BUFFER_SIZE=64
+CONFIG_SEGGER_RTT_MODE_NO_BLOCK_SKIP=y
+
+CONFIG_LOG=y
 CONFIG_LOG_BACKEND_RTT=y
 CONFIG_LOG_BACKEND_RTT_MODE_BLOCK=y
 CONFIG_LOG_BACKEND_RTT_OUTPUT_BUFFER_SIZE=16
 CONFIG_LOG_BACKEND_RTT_RETRY_CNT=4
 CONFIG_LOG_BACKEND_RTT_RETRY_DELAY_MS=5
 CONFIG_LOG_BACKEND_RTT_BUFFER=0
-
-CONFIG_LOG=y
 CONFIG_LOG_DEFAULT_LEVEL=3
 CONFIG_LOG_OVERRIDE_LEVEL=0
 CONFIG_LOG_MAX_LEVEL=4
 CONFIG_LOG_FUNC_NAME_PREFIX_DBG=y
-
 CONFIG_LOG_PRINTK=y
 CONFIG_LOG_MODE_OVERFLOW=y
 CONFIG_LOG_PROCESS_TRIGGER_THRESHOLD=10
@@ -54,5 +72,8 @@ CONFIG_LOG_PROCESS_THREAD=y
 CONFIG_LOG_PROCESS_THREAD_SLEEP_MS=1000
 CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=768
 CONFIG_LOG_BUFFER_SIZE=6144
-
 CONFIG_LOG_BACKEND_SHOW_COLOR=n
+
+CONFIG_NEWLIB_LIBC=y
+CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
+CONFIG_NEWLIB_LIBC_FLOAT_SCANF=y
