modify localization for multi-device version

--- a/dwm-tag/zephyr/CMakeLists.txt
+++ b/dwm-tag/zephyr/CMakeLists.txt
@@ -13,6 +13,10 @@ target_sources(app PRIVATE ../include/deca_types.h)
 target_sources(app PRIVATE ../include/deca_version.h)
 target_sources(app PRIVATE ../include/sleep.h)
 target_sources(app PRIVATE ../include/port.h)
+target_sources(app PRIVATE ../include/ble/ble_base.h)
+target_sources(app PRIVATE ../include/ble/ble_device.h)
+target_sources(app PRIVATE ../include/ble/ble_service.h)
+target_sources(app PRIVATE ../include/ble/ble_uuids.h)
 
 target_sources(app PRIVATE ../src/main.c)
 target_sources(app PRIVATE ../src/dw_main.c)
@@ -23,6 +27,9 @@ target_sources(app PRIVATE ../src/platform/deca_sleep.c)
 target_sources(app PRIVATE ../src/platform/deca_mutex.c)
 target_sources(app PRIVATE ../src/platform/deca_range_tables.c)
 target_sources(app PRIVATE ../src/platform/port.c)
+target_sources(app PRIVATE ../src/ble/ble_base.c)
+target_sources(app PRIVATE ../src/ble/ble_device.c)
+target_sources(app PRIVATE ../src/ble/ble_service.c)
 
 target_include_directories(app PRIVATE ../include/)
 target_include_directories(app PRIVATE ../src/)
