--- a/dwm-tag/zephyr/CMakeLists.txt
+++ b/dwm-tag/zephyr/CMakeLists.txt
@@ -13,6 +13,7 @@ target_sources(app PRIVATE ../include/deca_types.h)
 target_sources(app PRIVATE ../include/deca_version.h)
 target_sources(app PRIVATE ../include/sleep.h)
 target_sources(app PRIVATE ../include/port.h)
+target_sources(app PRIVATE ../include/spi_master.h)
 target_sources(app PRIVATE ../include/ble/ble_base.h)
 target_sources(app PRIVATE ../include/ble/ble_device.h)
 target_sources(app PRIVATE ../include/ble/ble_service.h)
@@ -20,6 +21,7 @@ target_sources(app PRIVATE ../include/ble/ble_uuids.h)
 
 target_sources(app PRIVATE ../src/main.c)
 target_sources(app PRIVATE ../src/dw_main.c)
+target_sources(app PRIVATE ../src/spi_master.c)
 target_sources(app PRIVATE ../src/platform/deca_device.c)
 target_sources(app PRIVATE ../src/platform/deca_params_init.c)
 target_sources(app PRIVATE ../src/platform/deca_spi.c)
